# Spark_Bulk_Data_Load

./: .gitignore  Jenkinsfile  README.md  main.py  pyproject.toml  test_pytest_sbdl.py
conf/: sbdl.conf  spark.conf
test_data/parties/: party_samples.csv
