[tool.poetry]
name = "sbdl"
version = "0.1.0"
description = ""
authors = ["yanggautier <yangguole@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
pytest = "^8.3.5"
pyspark = "3.5.1"
chispa = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
